测试多语言

--- a/config/lang/_lang.properties
+++ b/config/lang/_lang.properties
@@ -75,65 +75,62 @@ DZ6eBX=语言文件更新完成
 CpRbj2=请输入语言参数，如 --lang={0}
 
 # ■=bin/init_main.sh
+# ◆=initial_global
+# ●=exiterr@59
+AF5Sww=Unsupported distribution: $ID ($PRETTY_NAME)
+# ●=exiterr@63
+BOdVeV=Unable to detect Linux distribution, cannot proceed
 # ◆=check_user_sudo
-# ●=exiterr@40
+# ●=exiterr@104
 C7vvpk=无法安装 sudo，请使用 root 账号执行本脚本(su -)，或手动安装 sudo
-# ●=exiterr@42
+# ●=exiterr@106
 A3JlTg=用户非 sudo 组，请使用 root 账号执行本脚本(su -)，或手动加入 sudo
-# ◆=reset_user_lang
-# ●=info@208
-DpmB9o=User default language: $SYS_LANG
 # ◆=initial_env
-# ●=exiterr@232
+# ●=exiterr@127
 DVra9O=请手动修改软件源后再运行
-# ●=string@238
+# ●=string@133
 Cm1AH2=检测到 CD-ROM 作为软件源，是否重新选择软件源？
-# ●=string@241
+# ●=string@136
 ATkylH=是否重新选择软件源？
-# ●=info@261
+# ●=info@156
 Dae856=[1/1] 系统升级开始...
-# ●=success@266
+# ●=success@161
 Cxby7M=[1/2] 系统升级完成...
-# ●=info@269
+# ●=info@164
 DsimAa=[1/3] 检查系统环境...
 # ◆=config_sshd
-# ●=info@292
+# ●=info@187
 DdYPtu=sshd 未安装，正在安装...
-# ●=exiterr@293
+# ●=exiterr@188
 A4g2Al=安装 sshd 失败
-# ●=string@298
+# ●=string@193
 DM90xa=输入新的SSH端口 (当前: {0}) : 
-# ●=info@301
+# ●=info@196
 DYcOAy=已设置SSH端口: {0}
-# ●=info@303
+# ●=info@198
 CqfNuF=无效端口，保持默认: $curr_ssh_port
-# ●=info@310
+# ●=info@205
 AQeuwP=已允许 root 登录
-# ●=info@311
+# ●=info@206
 A2SYM5=已禁止 root 登录
-# ●=info@315
+# ●=info@210
 CB81YF=SSH 配置已应用
 # ◆=configure_ip
-# ●=info@327
+# ●=info@222
 A7KS7k=NetworkManager 正在运行
-# ●=info@330
+# ●=info@225
 DBvNSl=ifupdown 正在运行
-# ●=info@333
+# ●=info@228
 Bovkxu=wicked 正在运行
-# ●=info@336
+# ●=info@231
 ChTS8f=network-scripts 正在运行
-# ●=info@339
+# ●=info@234
 C1U5NZ=systemd-networkd 正在运行
-# ●=exiterr@342
+# ●=exiterr@237
 Dsf9VP=未知网络管理器，无法配置静态IP
 # ◆=install_docker
-# ●=info@348
+# ●=info@243
 BjtJRe=在 $DISTRO 上安装 Docker 与 Docker Compose...
-# ◆=init_main
-# ●=exiterr@423
-AF5Sww=Unsupported distribution: $ID ($PRETTY_NAME)
-# ●=exiterr@427
-BOdVeV=Unable to detect Linux distribution, cannot proceed
 
 # ■=lib/bash_utils.sh
 # ◆=confirm_action
@@ -214,7 +211,7 @@ BzOdCD=JSON format error
 
 # ■=lib/msg_handler.sh
 # ◆=msg_parse_param
-# ●=error]:@492
+# ●=error]:@406
 B8f7ce=>&2
 
 # ■=lib/network.sh
@@ -239,43 +236,36 @@ A20QCm=重启 systemd-networkd 失败，请检查配置文件后再试
 
 # ■=lib/python_install.sh
 # ◆=detect_system
-# ●=exiterr@59
+# ●=exiterr@46
 BBpAzp=不支持的架构: $arch
 # ◆=get_python_url
-# ●=exiterr@78
+# ●=exiterr@65
 CMgnrL=不支持的系统类型: $system_type
+# ◆=smart_wget
+# ●=string@165
+D0uaob=大小: $human_size ↑$size_change | 平均: $avg_speed_text
+# ●=string@173
+BlbqMk=[$spinner] $(date '+%H:%M:%S') | 运行时间: $elapsed_formatted | $cached_stats
 # ◆=install_py_standalone
-# ●=info@102
+# ●=info@214
 DG123W=下载 Python $PY_VERSION standalone...
-# ●=info@103
-DbCVDA=下载地址: $python_url
-# ●=info@111
+# ●=info@218
 AKcE5q=安装 Python 到 $PY_INST_DIR...
-# ●=exiterr@114
+# ●=exiterr@221
 DVgind=解压安装失败
-# ●=info@119
+# ●=exiterr@226
+AEegGv=Python 安装失败: $loc_bin 不存在或不可执行
+# ●=info@228
 AaYzRa=Python $PY_VERSION 安装完成！
-# ◆=verify_python
-# ●=exiterr@127
-De7A5e=Python 安装验证失败: $python_bin 不存在或不可执行
-# ●=exiterr@132
-C2GSOL=版本不匹配: 期望 $PY_VERSION, 实际 $inst_version
-# ●=info@135
-DrRJIO=Python 验证成功: $inst_version
 # ◆=create_py_venv
-# ●=warning@148
+# ●=warning@240
 CIZVGH=跳过虚拟环境创建
-# ●=info@153
+# ●=info@247
 C0cbAj=创建虚拟环境 $VENV_DIR...
-# ●=success@159
+# ●=success@252
 A1hmje=虚拟环境创建成功！
-# ●=exiterr@161
+# ●=exiterr@255
 AI3S2j=创建虚拟环境失败
 # ◆=main
-# ●=info@196
-AaV3Jw=Python $PY_VERSION Standalone 自动安装脚本
-
-# ■=lib/source_install.sh
-# ◆=main
-# ●=info@183
+# ●=info@294
 AaV3Jw=Python $PY_VERSION Standalone 自动安装脚本
