--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -50,11 +50,12 @@ DZ6eBX=语言文件更新完成
 CpRbj2=请输入语言参数，如 --lang={0}
 
 # ■=bin/init_main.sh
+# ◆=initial_global
+AF5Sww=Unsupported distribution: $ID ($PRETTY_NAME)
+BOdVeV=Unable to detect Linux distribution, cannot proceed
 # ◆=check_user_sudo
 C7vvpk=无法安装 sudo，请使用 root 账号执行本脚本(su -)，或手动安装 sudo
 A3JlTg=用户非 sudo 组，请使用 root 账号执行本脚本(su -)，或手动加入 sudo
-# ◆=reset_user_lang
-DpmB9o=User default language: $sys_lang
 # ◆=initial_env
 DVra9O=请手动修改软件源后再运行
 Cm1AH2=检测到 CD-ROM 作为软件源，是否重新选择软件源？
@@ -80,9 +81,6 @@ C1U5NZ=systemd-networkd 正在运行
 Dsf9VP=未知网络管理器，无法配置静态IP
 # ◆=install_docker
 BjtJRe=在 $DISTRO 上安装 Docker 与 Docker Compose...
-# ◆=init_main
-AF5Sww=Unsupported distribution: $ID ($PRETTY_NAME)
-BOdVeV=Unable to detect Linux distribution, cannot proceed
 
 # ■=lib/bash_utils.sh
 # ◆=confirm_action
@@ -155,24 +153,19 @@ A20QCm=重启 systemd-networkd 失败，请检查配置文件后再试
 BBpAzp=不支持的架构: $arch
 # ◆=get_python_url
 CMgnrL=不支持的系统类型: $system_type
-# ◆=install_python_standalone
+# ◆=smart_wget
+D0uaob=大小: $human_size ↑$size_change | 平均: $avg_speed_text
+BlbqMk=[$spinner] $(date '+%H:%M:%S') | 运行时间: $elapsed_formatted | $cached_stats
+# ◆=install_py_standalone
 DG123W=下载 Python $PY_VERSION standalone...
-DbCVDA=下载地址: $python_url
 AKcE5q=安装 Python 到 $PY_INST_DIR...
 DVgind=解压安装失败
+AEegGv=Python 安装失败: $loc_bin 不存在或不可执行
 AaYzRa=Python $PY_VERSION 安装完成！
-# ◆=verify_python
-De7A5e=Python 安装验证失败: $python_bin 不存在或不可执行
-C2GSOL=版本不匹配: 期望 $PY_VERSION, 实际 $inst_version
-DrRJIO=Python 验证成功: $inst_version
-# ◆=create_venv
+# ◆=create_py_venv
 CIZVGH=跳过虚拟环境创建
 C0cbAj=创建虚拟环境 $VENV_DIR...
 A1hmje=虚拟环境创建成功！
 AI3S2j=创建虚拟环境失败
-# ◆=main
-AaV3Jw=Python $PY_VERSION Standalone 自动安装脚本
-
-# ■=lib/source_install.sh
 # ◆=main
 AaV3Jw=Python $PY_VERSION Standalone 自动安装脚本
