language bug fix

--- a/config/lang/_lang.properties
+++ b/config/lang/_lang.properties
@@ -10,199 +10,199 @@
 # ■=bin/cmd_help.sh
 # ◆=show_help_info
 # ●=exiterr@215
-AQjaMs=Usage: show_help_info [command]\n \
+DVh_Ho=Usage: show_help_info [command]\n \
         Available commands: find, ls   
 # ●=exiterr@220
-AYmVTH=Error: Command '$cmd' not found.
+AfYlCL=Error: Command '$cmd' not found.
 # ◆=run_command
 # ●=exiterr@260
-AD2VnV=未找到命令 '$cmd_name'
+B2mmYr=未找到命令 '$cmd_name'
 # ●=exiterr@263
-BUhmCh=未找到命令 '$cmd_name' 的元数据
+DHeim3=未找到命令 '$cmd_name' 的元数据
 
 # ■=bin/deb/init_debian.sh
 # ◆=install_docker
 # ●=info@36
-BjtJRe=在 $DISTRO 上安装 Docker 与 Docker Compose...
+B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
 
 # ■=bin/i18n.sh
 # ◆=load_lang_files
 # ●=info@32
-CBlfKf=查找可用语言...
+AeQi7H=查找可用语言...
 # ●=info@41
-CZ8NA1=找到语言: $lang_name ($lang_file)
+DzUa6j=找到语言: $lang_name ($lang_file)
 # ◆=resolve_lang_files
 # ●=string@69
-Azgqih=模式参数错误 {0}
+BcI858=模式参数错误 {0}
 # ●=string@71
-Bh0G70={0} 语言文件已存在
+Aw82xn={0} 语言文件已存在
 # ●=string@74
-BZGS0v={0} 语言文件不存在
+A7XPUC={0} 语言文件不存在
 # ◆=add_lang_files
 # ●=string@133
-BXt0NX=# {0} 语言包，文档结构：\n\
+BGAgyU=# {0} 语言包，文档结构：\n\
 # 1. 自动处理 bin | lib 目录 sh 文件\n\
 # 2. 解析函数 string | info | exiterr | error | success | warning\n\
 # 3. key=distinct hash code + position + order\n\
 # 4. value=localized string
 # ●=info@143
-BhqiSJ={0} 语言文件已创建
+Aw3y8l={0} 语言文件已创建
 # ◆=do_del_lang_files
 # ●=string@159
-BhsV54={0} 语言文件已删除
+Aw30Tu={0} 语言文件已删除
 # ◆=del_lang_files
 # ●=string@171
-DciPpK=确定要删除 {0} 语言文件吗?
+B0BXr_=确定要删除 {0} 语言文件吗?
 # ●=string@172
-CSSC4A=操作已取消，文件未删除
+C7-6zR=操作已取消，文件未删除
 # ◆=get_lang_files
 # ●=string@193
-DsK0EU=确定要新增 {0} 语言文件吗?
+CEjzNC=确定要新增 {0} 语言文件吗?
 # ●=exiterr@206
-AhUfgx=请先添加语言文件
+DPIGII=请先添加语言文件
 # ◆=get_shell_files
 # ●=warning@220
-Dyyi9n=警告: 脚本文件 '{0}' 不存在
+DDag72=警告: 脚本文件 '{0}' 不存在
 # ●=exiterr@230
-Dgt6EZ=没有找到任何 shell 脚本文件
+D42Oj-=没有找到任何 shell 脚本文件
 # ◆=upd_lang_files
 # ●=info@254
-DTAUgm=开始更新语言文件
+DiwOgw=开始更新语言文件
 # ●=info@275
-DZ6eBX=语言文件更新完成
+A1bqoY=语言文件更新完成
 # ◆=i18n_main
 # ●=exiterr@400
-CpRbj2=请输入语言参数，如 --lang={0}
+D6sy7g=请输入语言参数，如 --lang={0}
 
 # ■=bin/init_main.sh
 # ◆=initial_global
 # ●=exiterr@59
-AF5Sww=Unsupported distribution: $ID ($PRETTY_NAME)
+C_wKj8=Unsupported distribution: $ID ($PRETTY_NAME)
 # ●=exiterr@63
-BOdVeV=Unable to detect Linux distribution, cannot proceed
+C9Ii-I=Unable to detect Linux distribution, cannot proceed
 # ◆=check_user_sudo
 # ●=exiterr@104
-C7vvpk=无法安装 sudo，请使用 root 账号执行本脚本(su -)，或手动安装 sudo
+AxwYcd=无法安装 sudo，请使用 root 账号执行本脚本(su -)，或手动安装 sudo
 # ●=exiterr@106
-A3JlTg=用户非 sudo 组，请使用 root 账号执行本脚本(su -)，或手动加入 sudo
+C1aPQb=用户非 sudo 组，请使用 root 账号执行本脚本(su -)，或手动加入 sudo
 # ◆=initial_env
 # ●=exiterr@127
-DVra9O=请手动修改软件源后再运行
+Cp5p-B=请手动修改软件源后再运行
 # ●=string@133
-Cm1AH2=检测到 CD-ROM 作为软件源，是否重新选择软件源？
+BbrFHw=检测到 CD-ROM 作为软件源，是否重新选择软件源？
 # ●=string@136
-ATkylH=是否重新选择软件源？
+DH-Jyo=是否重新选择软件源？
 # ●=info@156
-Dae856=[1/1] 系统升级开始...
+AHkPR9=[1/1] 系统升级开始...
 # ●=success@161
-Cxby7M=[1/2] 系统升级完成...
+Dt4LeC=[1/2] 系统升级完成...
 # ●=info@164
-DsimAa=[1/3] 检查系统环境...
+A7CkJF=[1/3] 检查系统环境...
 # ◆=config_sshd
 # ●=info@187
-DdYPtu=sshd 未安装，正在安装...
+CbkyTT=sshd 未安装，正在安装...
 # ●=exiterr@188
-A4g2Al=安装 sshd 失败
+CF_oEw=安装 sshd 失败
 # ●=string@193
-DM90xa=输入新的SSH端口 (当前: {0}) : 
+AwmRaO=输入新的SSH端口 (当前: {0}) : 
 # ●=info@196
-DYcOAy=已设置SSH端口: {0}
+B2i01m=已设置SSH端口: {0}
 # ●=info@198
-CqfNuF=无效端口，保持默认: $curr_ssh_port
+BAf12Q=无效端口，保持默认: $curr_ssh_port
 # ●=info@205
-AQeuwP=已允许 root 登录
+AV251C=已允许 root 登录
 # ●=info@206
-A2SYM5=已禁止 root 登录
+CMJB1s=已禁止 root 登录
 # ●=info@210
-CB81YF=SSH 配置已应用
+A58FQX=SSH 配置已应用
 # ◆=configure_ip
 # ●=info@222
-A7KS7k=NetworkManager 正在运行
+AGC_1W=NetworkManager 正在运行
 # ●=info@225
-DBvNSl=ifupdown 正在运行
+BqbrMF=ifupdown 正在运行
 # ●=info@228
-Bovkxu=wicked 正在运行
+AHezXa=wicked 正在运行
 # ●=info@231
-ChTS8f=network-scripts 正在运行
+BfE9I1=network-scripts 正在运行
 # ●=info@234
-C1U5NZ=systemd-networkd 正在运行
+C3EbKb=systemd-networkd 正在运行
 # ●=exiterr@237
-Dsf9VP=未知网络管理器，无法配置静态IP
+DS2AXc=未知网络管理器，无法配置静态IP
 # ◆=install_docker
 # ●=info@243
-BjtJRe=在 $DISTRO 上安装 Docker 与 Docker Compose...
+B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
 
 # ■=lib/bash_utils.sh
 # ◆=confirm_action
 # ●=string@42
-D69r-j=操作已取消
+Ai7UlQ=operation is cancelled
 # ◆=file_backup_sj
 # ●=exiterr@182
-Cnrx1A=未指定需要备份的文件
+A-g65z=未指定需要备份的文件
 # ●=warning@193
-CxzDe0=警告：未找到匹配 '$pattern' 的文件
+D7A4Jy=警告：未找到匹配 '$pattern' 的文件
 # ●=warning@205
-CcmxLB=备份文件 $backup_file 已存在，跳过
+BDbdpK=备份文件 $backup_file 已存在，跳过
 # ●=info@212
-AqMBPA=已创建备份: $src_file -> $backup_file
+CPJo9U=已创建备份: $src_file -> $backup_file
 # ●=error@215
-BgTRIj=错误：无法创建备份文件 $backup_file
+CNpapj=错误：无法创建备份文件 $backup_file
 # ●=exiterr@223
-DwtINR=重要文件无法备份
+DvpZ6Q=重要文件无法备份
 # ●=info@225
-AtHtxs=备份完成：成功 $backup_count 个，跳过 $skip_count 个，失败 $error_count 个
+ACMBwV=备份完成：成功 $backup_count 个，跳过 $skip_count 个，失败 $error_count 个
 
 # ■=lib/cmd_handler.sh
 # ◆=install_base_pkg
 # ●=info@20
-BknPaZ=自动安装 '$lnx_cmd' ...
+DvEyZZ=自动安装 '$lnx_cmd' ...
 # ●=exiterr@35
-DS_6zD=$lnx_cmd 安装失败，请手动安装，日志: {0} [{1}]
+BnlNCU=$lnx_cmd 安装失败，请手动安装，日志: {0} [{1}]
 # ●=success@37
-AyVqQT=$lnx_cmd 安装成功，日志: {0} [{1}]
+CUzI33=$lnx_cmd 安装成功，日志: {0} [{1}]
 # ◆=clean_pkg_mgr
 # ●=info@46
-CL3mF5=清理 {0} 缓存...
+BNHOyr=清理 {0} 缓存...
 # ●=exiterr@54
-DeScsX=清理缓存失败
+CMai8S=清理缓存失败
 # ◆=update_pkg_mgr
 # ●=info@61
-DEw7FX=更新镜像源列表...
+BDkuDB=更新镜像源列表...
 # ●=exiterr@68
-DuEpGS=更新失败，镜像可能不可用
+Cdk87Z=更新失败，镜像可能不可用
 # ◆=upgrade_pkg_mgr
 # ●=info@75
-DCx1UX=升级已安装的软件包...
+D-4Jrc=升级已安装的软件包...
 # ●=exiterr@82
-ATrBo6=升级软件包失败
+B3YUrw=升级软件包失败
 # ◆=remove_pkg_mgr
 # ●=info@89
-DRQJ6X=删除不再需要的依赖包...
+CLrdOC=删除不再需要的依赖包...
 # ●=exiterr@96
-Ct4Xe-=删除依赖包失败
+DFKvlL=删除依赖包失败
 
 # ■=lib/docker.sh
 # ◆=show_notice
 # ●=string@22
-B2PG-V=多选组件：格式如 1 3 4；再次选择相同项目可取消选择，回车结束
+A-Na7B=多选组件：格式如 1 3 4；再次选择相同项目可取消选择，回车结束
 # ◆=infra_setup
 # ●=info@154
-DaFnjo=⏎ 选择完成，正在保存配置到 .env 文件...
+Cb5gv1=⏎ 选择完成，正在保存配置到 .env 文件...
 
 # ■=lib/init_base_func.sh
 # ◆=select_mirror
 # ●=exiterr@34
-ACDhWH=错误：镜像列表文件不存在
+ASaya7=错误：镜像列表文件不存在
 # ●=exiterr@50
-CBS3sb=错误：未找到有效镜像URL
+A8MmpO=错误：未找到有效镜像URL
 # ●=success@53
-D77gSF=可用的镜像站：
+BYJFgs=可用的镜像站：
 # ●=string@57
-DVxchr=请选择镜像编号 [{0}](0=不做选择): 
+BcmiKG=请选择镜像编号 [{0}](0=不做选择): 
 # ●=success@69
-Dwt8Fb=已切换到: {0}
+Bc1qWs=已切换到: {0}
 # ●=string@73
-AT-5vC=输入{0}错误!{1}
+B_kcRO=输入{0}错误!{1}
 
 # ■=lib/json_handler.sh
 # ◆=fetch_options
@@ -211,7 +211,7 @@ BzOdCD=JSON format error
 
 # ■=lib/msg_handler.sh
 # ◆=msg_parse_param
-# ●=error]:@406
+# ●=error]:@432
 B8f7ce=>&2
 
 # ■=lib/network.sh
@@ -219,53 +219,53 @@ B8f7ce=>&2
 # ●=info@24
 DhWnL_=${ENV_NETWORK[
 # ●=info@39
-BYrgld=用户选择不修改网络配置
+CFrSgR=用户选择不修改网络配置
 # ◆=count_down
 # ●=info@91
-DbQGoY=${duration}秒后修改网络配置：$IP_ADDR (接口 $IFACE)，请准备好重连。按 Ctrl+C 取消
+BjHfVo=${duration}秒后修改网络配置：$IP_ADDR (接口 $IFACE)，请准备好重连。按 Ctrl+C 取消
 # ◆=config_nmcli
 # ●=exiterr@106
-A3rBaJ=错误：nmcli 未安装或不可用，请先安装 NetworkManager 命令行工具
+B3mgNd=错误：nmcli 未安装或不可用，请先安装 NetworkManager 命令行工具
 # ●=exiterr@132
-D4nmbp=连接激活失败，请检查网络并尝试重新连接
+CiQhsW=连接激活失败，请检查网络并尝试重新连接
 # ◆=config_default
 # ●=exiterr@214
-BcsNsm=错误：systemd-networkd 未安装或不可用
+CcDg5_=错误：systemd-networkd 未安装或不可用
 # ●=exiterr@222
-A20QCm=重启 systemd-networkd 失败，请检查配置文件后再试
+AH9rvM=重启 systemd-networkd 失败，请检查配置文件后再试
 
 # ■=lib/python_install.sh
 # ◆=detect_system
 # ●=exiterr@46
-BBpAzp=不支持的架构: $arch
+A-fT9S=不支持的架构: $arch
 # ◆=get_python_url
 # ●=exiterr@65
-CMgnrL=不支持的系统类型: $system_type
+B-i4aq=不支持的系统类型: $system_type
 # ◆=smart_wget
 # ●=string@165
-D0uaob=大小: $human_size ↑$size_change | 平均: $avg_speed_text
+BPBoao=大小: $human_size ↑$size_change | 平均: $avg_speed_text
 # ●=string@173
-BlbqMk=[$spinner] $(date '+%H:%M:%S') | 运行时间: $elapsed_formatted | $cached_stats
+ByQOLg=[$spinner] $(date '+%H:%M:%S') | 运行时间: $elapsed_formatted | $cached_stats
 # ◆=install_py_standalone
 # ●=info@214
-DG123W=下载 Python $PY_VERSION standalone...
+AatL4G=下载 Python {} standalone...
 # ●=info@218
-AKcE5q=安装 Python 到 $PY_INST_DIR...
+BA8WYI=安装 Python 到 {}...
 # ●=exiterr@221
-DVgind=解压安装失败
+CSK2Yu=解压安装失败
 # ●=exiterr@226
-AEegGv=Python 安装失败: $loc_bin 不存在或不可执行
+AMrdLk=Python 安装失败: $loc_bin 不存在或不可执行
 # ●=info@228
-AaYzRa=Python $PY_VERSION 安装完成！
+DkUaTG=Python $PY_VERSION 安装完成！
 # ◆=create_py_venv
 # ●=warning@240
-CIZVGH=跳过虚拟环境创建
+BqObTk=跳过虚拟环境创建
 # ●=info@247
-C0cbAj=创建虚拟环境 $VENV_DIR...
+AK7qPE=创建虚拟环境 $VENV_DIR...
 # ●=success@252
-A1hmje=虚拟环境创建成功！
+ClGJXq=虚拟环境创建成功！
 # ●=exiterr@255
-AI3S2j=创建虚拟环境失败
+AXm5nN=创建虚拟环境失败
 # ◆=main
-# ●=info@294
-AaV3Jw=Python $PY_VERSION Standalone 自动安装脚本
+# ●=info@295
+DNdsm8=Python $PY_VERSION Standalone 自动安装脚本
