--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -6,126 +6,126 @@
 
 # ■=bin/cmd_help.sh
 # ◆=show_help_info
-AQjaMs=Usage: show_help_info [command]\n \
+DVh_Ho=Usage: show_help_info [command]\n \
         Available commands: find, ls   
-AYmVTH=Error: Command '$cmd' not found.
+AfYlCL=Error: Command '$cmd' not found.
 # ◆=run_command
-AD2VnV=未找到命令 '$cmd_name'
-BUhmCh=未找到命令 '$cmd_name' 的元数据
+B2mmYr=未找到命令 '$cmd_name'
+DHeim3=未找到命令 '$cmd_name' 的元数据
 
 # ■=bin/deb/init_debian.sh
 # ◆=install_docker
-BjtJRe=在 $DISTRO 上安装 Docker 与 Docker Compose...
+B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
 
 # ■=bin/i18n.sh
 # ◆=load_lang_files
-CBlfKf=查找可用语言...
-CZ8NA1=找到语言: $lang_name ($lang_file)
+AeQi7H=查找可用语言...
+DzUa6j=找到语言: $lang_name ($lang_file)
 # ◆=resolve_lang_files
-Azgqih=模式参数错误 {0}
-Bh0G70={0} 语言文件已存在
-BZGS0v={0} 语言文件不存在
+BcI858=模式参数错误 {0}
+Aw82xn={0} 语言文件已存在
+A7XPUC={0} 语言文件不存在
 # ◆=add_lang_files
-BXt0NX=# {0} 语言包，文档结构：\n\
+BGAgyU=# {0} 语言包，文档结构：\n\
 # 1. 自动处理 bin | lib 目录 sh 文件\n\
 # 2. 解析函数 string | info | exiterr | error | success | warning\n\
 # 3. key=distinct hash code + position + order\n\
 # 4. value=localized string
-BhqiSJ={0} 语言文件已创建
+Aw3y8l={0} 语言文件已创建
 # ◆=do_del_lang_files
-BhsV54={0} 语言文件已删除
+Aw30Tu={0} 语言文件已删除
 # ◆=del_lang_files
-DciPpK=确定要删除 {0} 语言文件吗?
-CSSC4A=操作已取消，文件未删除
+B0BXr_=确定要删除 {0} 语言文件吗?
+C7-6zR=操作已取消，文件未删除
 # ◆=get_lang_files
-DsK0EU=确定要新增 {0} 语言文件吗?
-AhUfgx=请先添加语言文件
+CEjzNC=确定要新增 {0} 语言文件吗?
+DPIGII=请先添加语言文件
 # ◆=get_shell_files
-Dyyi9n=警告: 脚本文件 '{0}' 不存在
-Dgt6EZ=没有找到任何 shell 脚本文件
+DDag72=警告: 脚本文件 '{0}' 不存在
+D42Oj-=没有找到任何 shell 脚本文件
 # ◆=upd_lang_files
-DTAUgm=开始更新语言文件
-DZ6eBX=语言文件更新完成
+DiwOgw=开始更新语言文件
+A1bqoY=语言文件更新完成
 # ◆=i18n_main
-CpRbj2=请输入语言参数，如 --lang={0}
+D6sy7g=请输入语言参数，如 --lang={0}
 
 # ■=bin/init_main.sh
 # ◆=initial_global
-AF5Sww=Unsupported distribution: $ID ($PRETTY_NAME)
-BOdVeV=Unable to detect Linux distribution, cannot proceed
+C_wKj8=Unsupported distribution: $ID ($PRETTY_NAME)
+C9Ii-I=Unable to detect Linux distribution, cannot proceed
 # ◆=check_user_sudo
-C7vvpk=无法安装 sudo，请使用 root 账号执行本脚本(su -)，或手动安装 sudo
-A3JlTg=用户非 sudo 组，请使用 root 账号执行本脚本(su -)，或手动加入 sudo
+AxwYcd=无法安装 sudo，请使用 root 账号执行本脚本(su -)，或手动安装 sudo
+C1aPQb=用户非 sudo 组，请使用 root 账号执行本脚本(su -)，或手动加入 sudo
 # ◆=initial_env
-DVra9O=请手动修改软件源后再运行
-Cm1AH2=检测到 CD-ROM 作为软件源，是否重新选择软件源？
-ATkylH=是否重新选择软件源？
-Dae856=[1/1] 系统升级开始...
-Cxby7M=[1/2] 系统升级完成...
-DsimAa=[1/3] 检查系统环境...
+Cp5p-B=请手动修改软件源后再运行
+BbrFHw=检测到 CD-ROM 作为软件源，是否重新选择软件源？
+DH-Jyo=是否重新选择软件源？
+AHkPR9=[1/1] 系统升级开始...
+Dt4LeC=[1/2] 系统升级完成...
+A7CkJF=[1/3] 检查系统环境...
 # ◆=config_sshd
-DdYPtu=sshd 未安装，正在安装...
-A4g2Al=安装 sshd 失败
-DM90xa=输入新的SSH端口 (当前: {0}) :
-DYcOAy=已设置SSH端口: {0}
-CqfNuF=无效端口，保持默认: $curr_ssh_port
-AQeuwP=已允许 root 登录
-A2SYM5=已禁止 root 登录
-CB81YF=SSH 配置已应用
+CbkyTT=sshd 未安装，正在安装...
+CF_oEw=安装 sshd 失败
+AwmRaO=输入新的SSH端口 (当前: {0}) :
+B2i01m=已设置SSH端口: {0}
+BAf12Q=无效端口，保持默认: $curr_ssh_port
+AV251C=已允许 root 登录
+CMJB1s=已禁止 root 登录
+A58FQX=SSH 配置已应用
 # ◆=configure_ip
-A7KS7k=NetworkManager 正在运行
-DBvNSl=ifupdown 正在运行
-Bovkxu=wicked 正在运行
-ChTS8f=network-scripts 正在运行
-C1U5NZ=systemd-networkd 正在运行
-Dsf9VP=未知网络管理器，无法配置静态IP
+AGC_1W=NetworkManager 正在运行
+BqbrMF=ifupdown 正在运行
+AHezXa=wicked 正在运行
+BfE9I1=network-scripts 正在运行
+C3EbKb=systemd-networkd 正在运行
+DS2AXc=未知网络管理器，无法配置静态IP
 # ◆=install_docker
-BjtJRe=在 $DISTRO 上安装 Docker 与 Docker Compose...
+B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
 
 # ■=lib/bash_utils.sh
 # ◆=confirm_action
-D69r-j=操作已取消X100
+Ai7UlQ=操作已取消
 # ◆=file_backup_sj
-Cnrx1A=未指定需要备份的文件
-CxzDe0=警告：未找到匹配 '$pattern' 的文件
-CcmxLB=备份文件 $backup_file 已存在，跳过
-AqMBPA=已创建备份: $src_file -> $backup_file
-BgTRIj=错误：无法创建备份文件 $backup_file
-DwtINR=重要文件无法备份
-AtHtxs=备份完成：成功 $backup_count 个，跳过 $skip_count 个，失败 $error_count 个
+A-g65z=未指定需要备份的文件
+D7A4Jy=警告：未找到匹配 '$pattern' 的文件
+BDbdpK=备份文件 $backup_file 已存在，跳过
+CPJo9U=已创建备份: $src_file -> $backup_file
+CNpapj=错误：无法创建备份文件 $backup_file
+DvpZ6Q=重要文件无法备份
+ACMBwV=备份完成：成功 $backup_count 个，跳过 $skip_count 个，失败 $error_count 个
 
 # ■=lib/cmd_handler.sh
 # ◆=install_base_pkg
-BknPaZ=自动安装 '$lnx_cmd' ...
-DS_6zD=$lnx_cmd 安装失败，请手动安装，日志: {0} [{1}]
-AyVqQT=$lnx_cmd 安装成功，日志: {0} [{1}]
+DvEyZZ=自动安装 '$lnx_cmd' ...
+BnlNCU=$lnx_cmd 安装失败，请手动安装，日志: {0} [{1}]
+CUzI33=$lnx_cmd 安装成功，日志: {0} [{1}]
 # ◆=clean_pkg_mgr
-CL3mF5=清理 {0} 缓存...
-DeScsX=清理缓存失败
+BNHOyr=清理 {0} 缓存...
+CMai8S=清理缓存失败
 # ◆=update_pkg_mgr
-DEw7FX=更新镜像源列表...
-DuEpGS=更新失败，镜像可能不可用
+BDkuDB=更新镜像源列表...
+Cdk87Z=更新失败，镜像可能不可用
 # ◆=upgrade_pkg_mgr
-DCx1UX=升级已安装的软件包...
-ATrBo6=升级软件包失败
+D-4Jrc=升级已安装的软件包...
+B3YUrw=升级软件包失败
 # ◆=remove_pkg_mgr
-DRQJ6X=删除不再需要的依赖包...
-Ct4Xe-=删除依赖包失败
+CLrdOC=删除不再需要的依赖包...
+DFKvlL=删除依赖包失败
 
 # ■=lib/docker.sh
 # ◆=show_notice
-B2PG-V=多选组件：格式如 1 3 4；再次选择相同项目可取消选择，回车结束
+A-Na7B=多选组件：格式如 1 3 4；再次选择相同项目可取消选择，回车结束
 # ◆=infra_setup
-DaFnjo=⏎ 选择完成，正在保存配置到 .env 文件...
+Cb5gv1=⏎ 选择完成，正在保存配置到 .env 文件...
 
 # ■=lib/init_base_func.sh
 # ◆=select_mirror
-ACDhWH=错误：镜像列表文件不存在
-CBS3sb=错误：未找到有效镜像URL
-D77gSF=可用的镜像站：
-DVxchr=请选择镜像编号 [{0}](0=不做选择):
-Dwt8Fb=已切换到: {0}
-AT-5vC=输入{0}错误!{1}
+ASaya7=错误：镜像列表文件不存在
+A8MmpO=错误：未找到有效镜像URL
+BYJFgs=可用的镜像站：
+BcmiKG=请选择镜像编号 [{0}](0=不做选择):
+Bc1qWs=已切换到: {0}
+B_kcRO=输入{0}错误!{1}
 
 # ■=lib/json_handler.sh
 # ◆=fetch_options
@@ -138,34 +138,34 @@ B8f7ce=>&2
 # ■=lib/network.sh
 # ◆=need_fix_ip
 DhWnL_=${ENV_NETWORK[
-BYrgld=用户选择不修改网络配置
+CFrSgR=用户选择不修改网络配置
 # ◆=count_down
-DbQGoY=${duration}秒后修改网络配置：$IP_ADDR (接口 $IFACE)，请准备好重连。按 Ctrl+C 取消
+BjHfVo=${duration}秒后修改网络配置：$IP_ADDR (接口 $IFACE)，请准备好重连。按 Ctrl+C 取消
 # ◆=config_nmcli
-A3rBaJ=错误：nmcli 未安装或不可用，请先安装 NetworkManager 命令行工具
-D4nmbp=连接激活失败，请检查网络并尝试重新连接
+B3mgNd=错误：nmcli 未安装或不可用，请先安装 NetworkManager 命令行工具
+CiQhsW=连接激活失败，请检查网络并尝试重新连接
 # ◆=config_default
-BcsNsm=错误：systemd-networkd 未安装或不可用
-A20QCm=重启 systemd-networkd 失败，请检查配置文件后再试
+CcDg5_=错误：systemd-networkd 未安装或不可用
+AH9rvM=重启 systemd-networkd 失败，请检查配置文件后再试
 
 # ■=lib/python_install.sh
 # ◆=detect_system
-BBpAzp=不支持的架构: $arch
+A-fT9S=不支持的架构: $arch
 # ◆=get_python_url
-CMgnrL=不支持的系统类型: $system_type
+B-i4aq=不支持的系统类型: $system_type
 # ◆=smart_wget
-D0uaob=大小: $human_size ↑$size_change | 平均: $avg_speed_text
-BlbqMk=[$spinner] $(date '+%H:%M:%S') | 运行时间: $elapsed_formatted | $cached_stats
+BPBoao=大小: $human_size ↑$size_change | 平均: $avg_speed_text
+ByQOLg=[$spinner] $(date '+%H:%M:%S') | 运行时间: $elapsed_formatted | $cached_stats
 # ◆=install_py_standalone
-DG123W=下载 Python $PY_VERSION standalone...
-AKcE5q=安装 Python 到 $PY_INST_DIR...
-DVgind=解压安装失败
-AEegGv=Python 安装失败: $loc_bin 不存在或不可执行
-AaYzRa=Python $PY_VERSION 安装完成！
+AatL4G=下载 Python {} standalone...
+BA8WYI=安装 Python 到 {}...
+CSK2Yu=解压安装失败
+AMrdLk=Python 安装失败: $loc_bin 不存在或不可执行
+DkUaTG=Python $PY_VERSION 安装完成！
 # ◆=create_py_venv
-CIZVGH=跳过虚拟环境创建
-C0cbAj=创建虚拟环境 $VENV_DIR...
-A1hmje=虚拟环境创建成功！
-AI3S2j=创建虚拟环境失败
+BqObTk=跳过虚拟环境创建
+AK7qPE=创建虚拟环境 $VENV_DIR...
+ClGJXq=虚拟环境创建成功！
+AXm5nN=创建虚拟环境失败
 # ◆=main
-AaV3Jw=Python $PY_VERSION Standalone 自动安装脚本
+DNdsm8=Python $PY_VERSION Standalone 自动安装脚本
