print_array适配bash 4.2；install_py_standalone增加测试代码

--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -154,8 +154,8 @@ A-fT9S=不支持的架构: $arch
 # ◆=get_python_url
 B-i4aq=不支持的系统类型: $system_type
 # ◆=smart_wget
-BPBoao=大小: $human_size ↑$size_change | 平均: $avg_speed_text
-ByQOLg=[$spinner] $(date '+%H:%M:%S') | 运行时间: $elapsed_formatted | $cached_stats
+BPBoao=Size: $human_size ↑$size_change | Average: $avg_speed_text
+ByQOLg=[$spinner] $(date '+%H:%M:%S') | Runtime: $elapsed_formatted | $cached_stats
 # ◆=install_py_standalone
 AatL4G=Download Python {} standalone...
 BA8WYI=安装 Python 到 {}...
