.sjbk 备份文件后缀改为.bak; 清除垃圾代码; check_ip去掉sudo参数；其他代码调整

--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -57,15 +57,9 @@ C9Ii-I=Unable to detect Linux distribution, cannot proceed
 AxwYcd=无法安装 sudo，请使用 root 账号执行本脚本(su -)，或手动安装 sudo
 C1aPQb=用户非 sudo 组，请使用 root 账号执行本脚本(su -)，或手动加入 sudo
 # ◆=initial_env
-Cp5p-B=请手动修改软件源后再运行
-BbrFHw=检测到 CD-ROM 作为软件源，是否重新选择软件源？
-DH-Jyo=是否重新选择软件源？
-AHkPR9=[1/1] 系统升级开始...
-Dt4LeC=[1/2] 系统升级完成...
-A7CkJF=[1/3] 检查系统环境...
+DHzikX=安装所需软件包...
 # ◆=config_sshd
 CbkyTT=sshd 未安装，正在安装...
-CF_oEw=安装 sshd 失败
 AwmRaO=输入新的SSH端口 (当前: {0}) :
 B2i01m=已设置SSH端口: {0}
 BAf12Q=无效端口，保持默认: $curr_ssh_port
@@ -99,33 +93,12 @@ ACMBwV=备份完成：成功 $backup_count 个，跳过 $skip_count 个，失败
 DvEyZZ=自动安装 '$lnx_cmd' ...
 BnlNCU=$lnx_cmd 安装失败，请手动安装，日志: {0} [{1}]
 CUzI33=$lnx_cmd 安装成功，日志: {0} [{1}]
-# ◆=clean_pkg_mgr
-BNHOyr=清理 {0} 缓存...
-CMai8S=清理缓存失败
-# ◆=update_pkg_mgr
-BDkuDB=更新镜像源列表...
-Cdk87Z=更新失败，镜像可能不可用
-# ◆=upgrade_pkg_mgr
-D-4Jrc=升级已安装的软件包...
-B3YUrw=升级软件包失败
-# ◆=remove_pkg_mgr
-CLrdOC=删除不再需要的依赖包...
-DFKvlL=删除依赖包失败
 
 # ■=lib/docker.sh
 # ◆=show_notice
 A-Na7B=多选组件：格式如 1 3 4；再次选择相同项目可取消选择，回车结束
 # ◆=infra_setup
 Cb5gv1=⏎ 选择完成，正在保存配置到 .env 文件...
-
-# ■=lib/init_base_func.sh
-# ◆=select_mirror
-ASaya7=错误：镜像列表文件不存在
-A8MmpO=错误：未找到有效镜像URL
-BYJFgs=可用的镜像站：
-BcmiKG=请选择镜像编号 [{0}](0=不做选择):
-Bc1qWs=已切换到: {0}
-B_kcRO=输入{0}错误!{1}
 
 # ■=lib/json_handler.sh
 # ◆=fetch_options
@@ -153,6 +126,8 @@ AH9rvM=重启 systemd-networkd 失败，请检查配置文件后再试
 A-fT9S=不支持的架构: $arch
 # ◆=get_python_url
 B-i4aq=不支持的系统类型: $system_type
+# ◆=on_exit
+Alj5Ma=检测到中断，正在终止后台下载进程（PID=$oid...）
 # ◆=smart_wget
 BPBoao=大小: $human_size ↑$size_change | 平均: $avg_speed_text
 ByQOLg=[$spinner] $(date '+%H:%M:%S') | 运行时间: $elapsed_formatted | $cached_stats
