smart_wget改造成smart_geturl

--- a/config/lang/_lang.properties
+++ b/config/lang/_lang.properties
@@ -197,7 +197,7 @@ B-i4aq=不支持的系统类型: $system_type
 # ◆=on_exit
 # ●=warning@94
 Alj5Ma=检测到中断，正在终止后台下载进程（PID=$oid...）
-# ◆=smart_wget
+# ◆=smart_geturl
 # ●=string@168
 BPBoao=大小: $human_size ↑$size_change | 平均: $avg_speed_text
 # ●=string@176
