--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -128,7 +128,7 @@ A-fT9S=不支持的架构: $arch
 B-i4aq=不支持的系统类型: $system_type
 # ◆=on_exit
 Alj5Ma=检测到中断，正在终止后台下载进程（PID=$oid...）
-# ◆=smart_wget
+# ◆=smart_geturl
 BPBoao=大小: $human_size ↑$size_change | 平均: $avg_speed_text
 ByQOLg=[$spinner] $(date '+%H:%M:%S') | 运行时间: $elapsed_formatted | $cached_stats
 # ◆=install_py_standalone
