--- a/config/lang/_lang.properties
+++ b/config/lang/_lang.properties
@@ -22,7 +22,7 @@ DHeim3=未找到命令 '$cmd_name' 的元数据
 
 # ■=bin/deb/init_debian.sh
 # ◆=install_docker
-# ●=info@37
+# ●=info@25
 B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
 
 # ■=bin/i18n.sh
@@ -76,68 +76,70 @@ D6sy7g=请输入语言参数，如 --lang={0}
 
 # ■=bin/init_main.sh
 # ◆=initial_global
-# ●=exiterr@57
+# ●=exiterr@60
 C_wKj8=Unsupported distribution: $ID ($PRETTY_NAME)
-# ●=exiterr@61
+# ●=exiterr@64
 C9Ii-I=Unable to detect Linux distribution, cannot proceed
 # ◆=check_user_sudo
-# ●=exiterr@102
+# ●=exiterr@111
 AxwYcd=无法安装 sudo，请使用 root 账号执行本脚本(su -)，或手动安装 sudo
-# ●=exiterr@104
+# ●=exiterr@113
 C1aPQb=用户非 sudo 组，请使用 root 账号执行本脚本(su -)，或手动加入 sudo
 # ◆=initial_env
-# ●=info@126
+# ●=info@135
 DHzikX=安装所需软件包...
 # ◆=config_sshd
-# ●=info@148
+# ●=info@158
 CbkyTT=sshd 未安装，正在安装...
-# ●=string@158
+# ●=string@173
 AwmRaO=输入新的SSH端口 (当前: {0}) : 
-# ●=info@161
+# ●=info@176
 B2i01m=已设置SSH端口: {0}
-# ●=info@163
+# ●=info@178
 BAf12Q=无效端口，保持默认: $curr_ssh_port
-# ●=info@170
+# ●=info@185
 AV251C=已允许 root 登录
-# ●=info@171
+# ●=info@186
 CMJB1s=已禁止 root 登录
-# ●=info@175
+# ●=info@196
 A58FQX=SSH 配置已应用
 # ◆=configure_ip
-# ●=info@187
+# ●=info@209
 AGC_1W=NetworkManager 正在运行
-# ●=info@190
+# ●=info@212
 BqbrMF=ifupdown 正在运行
-# ●=info@193
+# ●=info@215
 AHezXa=wicked 正在运行
-# ●=info@196
+# ●=info@218
 BfE9I1=network-scripts 正在运行
-# ●=info@199
+# ●=info@221
 C3EbKb=systemd-networkd 正在运行
-# ●=exiterr@202
+# ●=exiterr@224
 DS2AXc=未知网络管理器，无法配置静态IP
 # ◆=install_docker
-# ●=info@208
+# ●=info@230
 B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
 
 # ■=lib/bash_utils.sh
 # ◆=confirm_action
 # ●=string@48
 Ai7UlQ=operation is cancelled
+# ●=exiterr@51
+A5CS0E=User interrupted the operation, exiting the program
 # ◆=file_backup_sj
-# ●=exiterr@188
+# ●=exiterr@191
 A-g65z=未指定需要备份的文件
-# ●=warning@199
+# ●=warning@202
 D7A4Jy=警告：未找到匹配 '$pattern' 的文件
-# ●=warning@211
+# ●=warning@214
 BDbdpK=备份文件 $backup_file 已存在，跳过
-# ●=info@218
+# ●=info@221
 CPJo9U=已创建备份: $src_file -> $backup_file
-# ●=error@221
+# ●=error@224
 CNpapj=错误：无法创建备份文件 $backup_file
-# ●=exiterr@229
+# ●=exiterr@232
 DvpZ6Q=重要文件无法备份
-# ●=info@231
+# ●=info@234
 ACMBwV=备份完成：成功 $backup_count 个，跳过 $skip_count 个，失败 $error_count 个
 
 # ■=lib/cmd_handler.sh
@@ -195,33 +197,33 @@ A-fT9S=不支持的架构: $arch
 # ●=exiterr@65
 B-i4aq=不支持的系统类型: $system_type
 # ◆=on_exit
-# ●=warning@94
+# ●=warning@105
 Alj5Ma=检测到中断，正在终止后台下载进程（PID=$oid...）
 # ◆=smart_geturl
-# ●=string@168
+# ●=string@179
 BPBoao=大小: $human_size ↑$size_change | 平均: $avg_speed_text
-# ●=string@176
-ByQOLg=[$spinner] $(date '+%H:%M:%S') | 运行时间: $elapsed_formatted | $cached_stats
+# ●=string@187
+Dtkr_n=$(date '+%H:%M:%S') | 运行时间: $elapsed_formatted | $cached_stats
 # ◆=install_py_standalone
-# ●=info@217
+# ●=info@228
 AatL4G=下载 Python {} standalone...
-# ●=info@222
+# ●=info@233
 BA8WYI=安装 Python 到 {}...
-# ●=exiterr@225
+# ●=exiterr@236
 CSK2Yu=解压安装失败
-# ●=exiterr@230
+# ●=exiterr@241
 AMrdLk=Python 安装失败: $loc_bin 不存在或不可执行
-# ●=info@232
+# ●=info@243
 DkUaTG=Python $PY_VERSION 安装完成！
 # ◆=create_py_venv
-# ●=warning@244
+# ●=warning@255
 BqObTk=跳过虚拟环境创建
-# ●=info@251
+# ●=info@262
 AK7qPE=创建虚拟环境 $VENV_DIR...
-# ●=success@256
+# ●=success@267
 ClGJXq=虚拟环境创建成功！
-# ●=exiterr@259
+# ●=exiterr@270
 AXm5nN=创建虚拟环境失败
 # ◆=main
-# ●=info@299
+# ●=info@300
 DNdsm8=Python $PY_VERSION Standalone 自动安装脚本
