--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -79,6 +79,7 @@ B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
 # ■=lib/bash_utils.sh
 # ◆=confirm_action
 Ai7UlQ=operation is cancelled
+A5CS0E=User interrupted the operation, exiting the program
 # ◆=file_backup_sj
 A-g65z=未指定需要备份的文件
 D7A4Jy=警告：未找到匹配 '$pattern' 的文件
@@ -130,7 +131,7 @@ B-i4aq=不支持的系统类型: $system_type
 Alj5Ma=检测到中断，正在终止后台下载进程（PID=$oid...）
 # ◆=smart_geturl
 BPBoao=Size: $human_size ↑$size_change | Average: $avg_speed_text
-ByQOLg=[$spinner] $(date '+%H:%M:%S') | Runtime: $elapsed_formatted | $cached_stats
+Dtkr_n=$(date '+%H:%M:%S') | 运行时间: $elapsed_formatted | $cached_stats
 # ◆=install_py_standalone
 AatL4G=Download Python {} standalone...
 BA8WYI=安装 Python 到 {}...
