全局语言相关变量调整

--- a/config/lang/.es.properties
+++ b/config/lang/.es.properties
@@ -1,4 +1,11 @@
-# msg_handler参数配置
+# global parameter
+# initialize
+INIT_SUDO_NO_EXIST="Por favor, ejecute este script como root (su -) o instale sudo manualmente"
+INIT_SHELL_LANG="Inicializar el idioma del script (predeterminado={}): "
+INIT_SYSTEM_START="Iniciar el sistema"
+INIT_SYSTEM_END="Finalizar el sistema"
+INIT_LINUX_UNSUPPORT="Distribución de Linux no compatible"
+# msg_handler
 MSG_ERROR="Error"
 MSG_SUCCESS="Éxito"
 MSG_WARNING="Advertencia"
