--- a/config/lang/.fr.properties
+++ b/config/lang/.fr.properties
@@ -1,4 +1,11 @@
-# msg_handler参数配置
+# global parameter
+# initialize
+INIT_SUDO_NO_EXIST="Veuillez exécuter ce script en tant que root (su -) ou installer sudo manuellement"
+INIT_SHELL_LANG="Initialiser la langue du script (par défaut={}): "
+INIT_SYSTEM_START="Initialiser le démarrage du système"
+INIT_SYSTEM_END="Initialiser la fin du système"
+INIT_LINUX_UNSUPPORT="Distribution Linux non prise en charge"
+# msg_handler
 MSG_ERROR="Erreur"
 MSG_SUCCESS="Succès"
 MSG_WARNING="Avertissement"
