--- a/config/lang/.ja.properties
+++ b/config/lang/.ja.properties
@@ -1,4 +1,11 @@
-# msg_handler参数配置
+# global parameter
+# initialize
+INIT_SUDO_NO_EXIST="このスクリプトを root (su -) として実行するか、sudo を手動でインストールしてください"
+INIT_SHELL_LANG="スクリプト言語を初期化 (デフォルト={}): "
+INIT_SYSTEM_START="システムの開始を初期化"
+INIT_SYSTEM_END="システムの終了を初期化"
+INIT_LINUX_UNSUPPORT="サポートされていないLinuxディストリビューション"
+# msg_handler
 MSG_ERROR="エラー"
 MSG_SUCCESS="成功"
 MSG_WARNING="警告"
