--- a/config/lang/.ko.properties
+++ b/config/lang/.ko.properties
@@ -1,4 +1,11 @@
-# msg_handler参数配置
+# global parameter
+# initialize
+INIT_SUDO_NO_EXIST="이 스크립트를 root (su -)로 실행하거나 sudo를 수동으로 설치하세요"
+INIT_SHELL_LANG="스크립트 언어 초기화 (기본값={}): "
+INIT_SYSTEM_START="시스템 시작 초기화"
+INIT_SYSTEM_END="시스템 종료 초기화"
+INIT_LINUX_UNSUPPORT="지원되지 않는 Linux 배포판"
+# msg_handler
 MSG_ERROR="오류"
 MSG_SUCCESS="성공"
 MSG_WARNING="경고"
