--- a/config/lang/.de.properties
+++ b/config/lang/.de.properties
@@ -1,4 +1,11 @@
-# msg_handler参数配置
+# global parameter
+# initialize
+INIT_SUDO_NO_EXIST="Bitte führen Sie dieses Skript als root (su -) aus oder installieren Sie sudo manuell"
+INIT_SHELL_LANG="Skriptsprache initialisieren (Standard={}): "
+INIT_SYSTEM_START="Systemstart initialisieren"
+INIT_SYSTEM_END="Systemende initialisieren"
+INIT_LINUX_UNSUPPORT="Nicht unterstützte Linux-Distribution"
+# msg_handler
 MSG_ERROR="Fehler"
 MSG_SUCCESS="Erfolg"
 MSG_WARNING="Warnung"
