--- a/config/lang/.zh.properties
+++ b/config/lang/.zh.properties
@@ -1,4 +1,11 @@
-# msg_handler参数配置
+# global parameter
+# initialize
+INIT_SUDO_NO_EXIST="请使用 root 账号执行本脚本(su -)，或手动安装 sudo"
+INIT_SHELL_LANG="初始化脚本语言(默认={}): "
+INIT_SYSTEM_START="初始化系统启动"
+INIT_SYSTEM_END="初始化系统结束"
+INIT_LINUX_UNSUPPORT="不支持的Linux发行版"
+# msg_handler
 MSG_ERROR="错误"
 MSG_SUCCESS="成功"
 MSG_WARNING="警告"
